src/test/ui/issues/70000-79999/issue-70724-add_type_neq_err_label-unwrap.rs
fn a() -> i32 {
    3
}

pub fn main() {
    assert_eq!(a, 0);
    //~^ ERROR binary operation `==` cannot
    //~| ERROR mismatched types
    //~| ERROR doesn't implement
}
